--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,40 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Welcome to {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Welcome to {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a class="link-primary" href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
         Makes creating solutions and reports easy and fun 😀<br>
         <br>
-        Based on <a href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a href="https://contabo.com/en/">Contabo</a> servers.<br>
-        If you want to get in touch with me just visit my <a href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a href="https://blk8.de">WordPress site</a>.
-        <br><br><br>
+        Based on <a class="link-primary" href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a class="link-primary" href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a class="link-primary" href="https://contabo.com/en/">Contabo</a> servers.<br>
+        If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.
     </div>
 
-    <div class="container">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 {% for world in worlds %}
-                    <li data-target="#myCarousel" data-slide-to="{{ loop.index  }}"></li>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="{{ loop.index  }}" aria-label="Slide {{ loop.index + 1 }}"></button>
                 {% endfor %}
-            </ol>
+            </div>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
-                <div class="item active">
-                    <img src="/static/kringle_worlds.png" alt="Kringle Worlds" style="max-height:300px;height:100%">
-                    <div class="carousel-caption">
+                <div class="carousel-item active">
+                    <img class="d-block mx-auto" src="/static/kringle_worlds.png" alt="Kringle Worlds">
+                    <div class="carousel-caption d-none d-md-block">
                             <h3>Welcome to Kringle.info</h3>
                     </div>
                 </div>
                 {% for world in worlds %}
-                    <div class="item">
-                        <a href="{{ url_for('show_world', world_id=world.world_id)}}"><img src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" style="max-height:300px;height:100%" alt="World Logo"></a>
-                        <div class="carousel-caption">
+                    <div class="carousel-item">
+                        <a href="{{ url_for('show_world', world_id=world.world_id)}}"><img class="d-block mx-auto" src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" alt="World Logo"></a>
+                        <div class="carousel-caption d-none d-md-block">
                             <h3>{{ world.world_name }}</h3>
                         </div>
                     </div>
@@ -45,14 +42,14 @@
             </div>
 
             <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
 {% endblock %}
