--- a/static/main.css
+++ b/static/main.css
@@ -9,8 +9,9 @@ body {
 }
 
 .carousel-inner img {
-    margin: auto;
-    height: 500px !important;
+    max-width: 100%;
+    max-height: 100%;
+    height: 300px;
 }
 
 .btn-space {
