--- a/templates/account_detail.html
+++ b/templates/account_detail.html
@@ -1,49 +1,47 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Edit Account {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Edit Account {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid pb-3 mt-2 mb-2">
         <!-- Delete Modal -->
-        <div id="myModal_del" class="modal fade" role="dialog">
+        <div id="myModal_del" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Delete Account</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_my_creator') }}" method="POST">
                             {{ form3.csrf_token }}
                             {{ form3.operation }}
-                            <button type="submit" class="btn btn-danger">Confirm</button>
+                            <button type="submit" class="btn btn-danger mt-4 mb-4">Confirm</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <h4>Please enter data</h4>
+        <h4 class="mb-3">Please enter data</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form1.csrf_token }}
             {{ form1.operation }}
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="email">{{ form1.email.label }}</label>
                 {{ form1.email(size=20, class="form-control") }}
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="description">{{ form1.description.label }}</label>
                 {{ form1.description(size=40, class="form-control") }}
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="url">{{ form1.url.label }}</label>
                 {{ form1.url(size=20, class="form-control") }}
             </div>
@@ -55,20 +53,20 @@
                     <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                 {% endfor %}
             {% endif %}
-            <button type="submit" class="btn btn-default">Update</button>
+            <button type="submit" class="btn btn-primary mt-4 mb-4">Update</button>
         </form>
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <h4>Set new password</h4>
+        <h4 class="mb-3">Set new password</h4>
         <form action="{{ url_for('show_my_creator') }}" method="POST">
             {{ form2.csrf_token }}
             {{ form2.operation }}
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="password">{{ form2.password.label }}</label>
                 {{ form2.password(size=20, class="form-control") }}
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="password2">{{ form2.password2.label }}</label>
                 {{ form2.password2(size=20, class="form-control") }}
             </div>
@@ -77,13 +75,12 @@
                     <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                 {% endfor %}
             {% endif %}
-            <button type="submit" class="btn btn-default">Set</button>
+            <button type="submit" class="btn btn-primary mt-4 mb-4">Set</button>
         </form>
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <h4>Delete this user account</h4>
-        <br>
-        <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete Account</button>
+        <h4 class="mb-3">Delete this user account</h4>
+        <button type="button" class="btn btn-danger mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Account</button>
     </div>
 {% endblock %}
