--- a/templates/base.html
+++ b/templates/base.html
@@ -5,65 +5,75 @@
         <title>Kringle Info - {% block title %} {% endblock %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <!-- Latest compiled JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <!-- Bootstrap v5.1.3 -->
+        <!-- https://www.bootstrapcdn.com -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+        <!-- Bootstrap Icons v1.8.3 -->
+        <!-- https://icons.getbootstrap.com/#icon-font -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
+        <!-- EasyMDE - Markdown Editor -->
+        <!-- https://easy-markdown-editor.tk -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
         <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 
+        <!-- Own functions and stylesheets, overrides -->
         <script src="{{ prefix }}/static/helper_func.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ prefix }}/static/main.css">
+
+        <!-- Favicon -->
         <link rel="icon" type="image/png" href="{{ prefix }}/static/kringle_logo_s.png">
     </head>
 
     <body>
         <div id="page-start"></div>
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="{{ url_for('show_index') }}">Kringle.info</a>
+                <a class="navbar-brand" href="{{ url_for('show_index') }}">Kringle.info</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('show_creators') }}">Creators</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('show_worlds') }}">Worlds</a></li>
+
+                        {% if session['world_id'] %}
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_rooms', world_id=session['world_id']) }}">Rooms</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_items', world_id=session['world_id']) }}">Items</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="{{ url_for('show_persons', world_id=session['world_id']) }}">Persons</a></li>-->
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_objectives', world_id=session['world_id']) }}">Objectives</a></li>
+                            <!--<li class="nav-item"><a class="nav-link" href="{{ url_for('show_junctions', world_id=session['world_id']) }}">Junctions</a></li>-->
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Rooms</a></li>
+                            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Items</a></li>
+                            <!--<li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Persons</a></li>-->
+                            <li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Objectives</a></li>
+                            <!--<li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Junctions</a></li>-->
+                        {% endif %}
+
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('show_stats') }}">Stats</a></li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        {% if current_user.is_authenticated %}
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_storage') }}"><i class="bi bi-hdd"></i> Storage</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_my_creator') }}"><i class="bi bi-person-fill"></i> My Account</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_logout') }}"><i class="bi bi-door-open-fill"></i> Logout</a></li>
+                        {% else %}
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_new_creator') }}"><i class="bi bi-person"></i> New Account</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('show_logged') }}"><i class="bi bi-door-open"></i> Login</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('show_creators') }}">Creators</a></li>
-                    <li><a href="{{ url_for('show_worlds') }}">Worlds</a></li>
-
-                    {% if session['world_id'] %}
-                        <li><a href="{{ url_for('show_rooms', world_id=session['world_id']) }}">Rooms</a></li>
-                        <li><a href="{{ url_for('show_items', world_id=session['world_id']) }}">Items</a></li>
-                        <!--<li><a href="{{ url_for('show_persons', world_id=session['world_id']) }}">Persons</a></li>-->
-                        <li><a href="{{ url_for('show_objectives', world_id=session['world_id']) }}">Objectives</a></li>
-                        <!--<li><a href="{{ url_for('show_junctions', world_id=session['world_id']) }}">Junctions</a></li>-->
-                    {% else %}
-                        <li><a class="btn disabled" href="#">Rooms</a></li>
-                        <li><a class="btn disabled" href="#">Items</a></li>
-                        <!--<li><a class="btn disabled" href="#">Persons</a></li>-->
-                        <li><a class="btn disabled" href="#">Objectives</a></li>
-                        <!--<li><a class="btn disabled" href="#">Junctions</a></li>-->
-                    {% endif %}
-
-                    <li><a href="{{ url_for('show_stats') }}">Stats</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                        <li><a href="{{ url_for('show_storage') }}"><span class="glyphicon glyphicon-hdd"></span> Storage</a></li>
-                        <li><a href="{{ url_for('show_my_creator') }}"><span class="glyphicon glyphicon-user"></span> My Account</a></li>
-                        <li><a href="{{ url_for('show_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-                    {% else %}
-                        <li><a href="{{ url_for('show_new_creator') }}"><span class="glyphicon glyphicon-user"></span> New Account</a></li>
-                        <li><a href="{{ url_for('show_logged') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    {% endif %}
-                </ul>
             </div>
         </nav>
 
         {% block content %} {% endblock %}
 
-        <br><hr class="solid"><br>
+        <hr class="solid mt-4 mb-4">
 
         <footer class="page-footer">
             <div class="container-fluid">
@@ -75,25 +85,18 @@
                             {% else %}
                                 Not logged in.
                             {% endif %}
-                            <a href="{{ url_for('show_release')}}">Version: {{ version }}</a>
+                            <a class="link-dark" href="{{ url_for('show_release')}}">Version: {{ version }}</a>
                         </h6>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <h6 class="font-weight-bold">
-                            <a href="{{ prefix }}/static/doc/index.html">Read Docs</a>,
-                            <a href="{{ prefix }}/swagger">Show API</a>
+                            <a class="link-dark" href="{{ prefix }}/static/doc/index.html">Read Docs</a>,
+                            <a class="link-dark" href="{{ prefix }}/swagger">Show API</a>
                         </h6>
                     </div>
                 </div>
             </div>
-            <div class="footer-copyright text-center"><a href="#page-start">Go to top of page</a></div>
+            <div class="footer-copyright text-center"><a class="link-dark" href="#page-start">Go to top of page</a></div>
         </footer>
-        <br>
-
-        <script>
-        $(document).ready(function(){
-          $('[data-toggle="tooltip"]').tooltip();
-        });
-        </script>
     </body>
 </html>
