--- a/templates/creator_detail.html
+++ b/templates/creator_detail.html
@@ -1,23 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} {{ creator.creator_name }} {% endblock %} ({% if creator.creator_role == "creator" %}<span class="glyphicon glyphicon-king"></span> World Creator{% else %}User{% endif %})
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} {{ creator.creator_name }} {% endblock %} ({% if creator.creator_role == "creator" %}<i class="bi bi-mortarboard"></i> World Creator{% else %}User{% endif %})</h2>
     </div>
 
-    <div class="container-fluid">
-        <img src="{{ creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" alt="Creator Image" width="33%" height="33%">
-        <br><br>
-
-        <div class="panel panel-default">
-            <div class="panel-body">{{ creator.creator_desc }}</div>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <div class="card mb-3" style="max-width: 720px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{{ creator.creator_img if (creator.creator_img!='') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Creator Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <p class="card-text">{{ creator.creator_desc }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <br><br>
 
-        <a href="{{ url_for('show_creators') }}" class="btn btn-default">
-            <span class="glyphicon glyphicon-th-list"></span> All Creators
+        <a href="{{ url_for('show_creators') }}" class="btn btn-primary mt-4 mb-4">
+            <i class="bi bi-list-ul"></i> All Creators
         </a>
     </div>
 {% endblock %}
