--- a/templates/error.html
+++ b/templates/error.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Error {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Error {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid pb-3 mt-2 mb-2">
         <b>Oops</b>, you have found a crack in the matrix.
     </div>
 {% endblock %}
