--- a/templates/login.html
+++ b/templates/login.html
@@ -1,39 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Login {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Login {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-        <h4>Enter your login data</h4>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <h4 class="mb-3">Enter your login data</h4>
         <form action="{{ url_for('show_login') }}" method="POST">
             {{ form.csrf_token }}
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="creator">{{ form.creator.label }}</label>
                 {{ form.creator(size=20, class="form-control") }}
             </div>
             {% for error in form.creator.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 <label for="password">{{ form.password.label }}</label>
                 {{ form.password(size=20, class="form-control") }}
             </div>
             {% for error in form.password.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
-            <div class="checkbox">
-                <label>{{ form.remember() }} {{ form.remember.label }}</label>
+            <div class="form-check mt-2 mb-2">
+                <label class="form-check-label" for="remember">{{ form.remember.label }}</label>
+                {{ form.remember(class="form-check-input") }}
             </div>
             {% if form.remember.errors %}
                 {% for error in form.remember.errors %}
                     <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                 {% endfor %}
             {% endif %}
-            <button type="submit" class="btn btn-default">Log in</button>
+            <button type="submit" class="btn btn-primary mt-4 mb-4">Log in</button>
         </form>
     </div>
 {% endblock %}
