--- a/templates/storage.html
+++ b/templates/storage.html
@@ -1,40 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} S3 Storage {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} S3 Storage {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-        <h4>Upload your file here</h4>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <h4 class="mb-3">Upload your file here</h4>
         <form action="{{ url_for('show_storage') }}" method="POST" enctype=multipart/form-data>
             {{ form.csrf_token }}
-            <div class="form-group">
+            <div class="form-group mt-2 mb-2">
                 {{ form.file }}
             </div>
-            <button type="submit" class="btn btn-default">Upload</button>
+            <button type="submit" class="btn btn-primary mt-4 mb-4">Upload</button>
             {% for error in form.file.errors %}
                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
             {% endfor %}
         </form>
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <h4>These are your uploaded files</h4>
+        <h4 class="mb-3">These are your uploaded files</h4>
         Click on the options to download or delete them.<br>
-        If you click on <i>copy markdown link</i> the link to that image which you can use in your markdown snippets will be copied to your clipboard.
-        <br><br>
+        If you click on <i>copy markdown link</i> the link to that image which you can use in your markdown snippets will be copied to your clipboard<br><br>
+
         <ul class="list-group">
-        {% for item in contents %}
-            <li class="list-group-item">
-                <a href="{{ url_for('do_download', creatorname='.', filename=item.Key) }}"><span class="glyphicon glyphicon-download"></span></a> - <a href="{{ url_for('do_delete', creatorname='.', filename=item.Key) }}"><span class="glyphicon glyphicon-trash"></span></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}');return false;"><span class="glyphicon glyphicon-link"></span></a> {{ item.Key }}
-            </li>
-        {% endfor %}
+            {% for item in contents %}
+                <li class="list-group-item">
+                    <a href="{{ url_for('do_download', creatorname='.', filename=item.Key) }}"><i class="bi bi-download"></i></a> - <a href="{{ url_for('do_delete', creatorname='.', filename=item.Key) }}"><i class="bi bi-trash"></i></a> - <a href="#" onclick="CopyToClipboard('{{ item.Key }}');return false;"><i class="bi bi-link"></i></a> {{ item.Key }}
+                </li>
+            {% endfor %}
         </ul>
         {% for item in contents %}
-        <div id="{{ item.Key }}" style="font-size:0;">![{{ item.Key }}](https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ item.Key }})</div>
+            <div id="{{ item.Key }}" style="font-size:0;">![{{ item.Key }}](https://eu2.contabostorage.com/6c12e0aef74840bf9c331581d3f4d52c:kringle-public/{{ item.Key }})</div>
         {% endfor %}
     </div>
 {% endblock %}
