--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -1,167 +1,167 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} {{ objective.objective_title }} {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} {{ objective.objective_title }} {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-        <i>Found in <a href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></i>
-        <br><br>
-
-        <img src="{{ objective.objective_img if (objective.objective_img!='') else '/static/not_found.jpg' }}" alt="Objective Image" width="33%" height="33%">
-        <br><br>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">{{ objective.objective_name }}</div>
-            <div class="panel-body">{{ objective.objective_desc }}</div>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <div class="card mb-3" style="max-width: 720px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{{ objective.objective_img if (objective.objective_img!='') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="Objective Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ objective.objective_name }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Found in <a href="{{ url_for('show_room', room_id=room.room_id)}}">{{ room.room_name }}</a></h6>
+                        <p class="card-text">{{ objective.objective_desc }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="well">
-            Difficulty: <span class="badge">{{ objective.difficulty }}</span><br>
-            Supported by {{ objective.supported_by }}<br>
-            Requires {{ objective.requires }}<br>
-            URL: {{ objective.objective_url }}
+        <div class="card">
+            <div class="card-body">
+                Difficulty: <span class="badge bg-secondary">{{ objective.difficulty }}</span><br>
+                Supported by {{ objective.supported_by }}<br>
+                Requires {{ objective.requires }}<br>
+                URL: {{ objective.objective_url }}
+            </div>
         </div>
-
-        <br><br>
 
         <!-- Delete Modal -->
-        <div id="myModal_del" class="modal fade" role="dialog">
+        <div id="myModal_del" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Delete Objective</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_deleted_objective', objective_id=objective.objective_id) }}">
-                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                            <button type="submit" class="btn btn-danger mt-4 mb-4">Confirm</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Modal -->
-        <div id="myModal" class="modal fade" role="dialog">
+        <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Edit Objective</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_objective_p', objective_id=objective.objective_id) }}" method="POST">
                             {{ form.csrf_token }}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="name">{{ form.name.label }}</label>
                                 {{ form.name(size=20, class="form-control") }}
                             </div>
                             {% for error in form.name.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="title">{{ form.title.label }}</label>
                                 {{ form.title(size=20, class="form-control") }}
                             </div>
                             {% for error in form.title.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="difficulty">{{ form.difficulty.label }}</label>
                                 {{ form.difficulty(size=1, class="form-control") }}
                             </div>
                             {% for error in form.difficulty.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="url">{{ form.url.label }}</label>
                                 {{ form.url(size=20, class="form-control") }}
                             </div>
                             {% for error in form.url.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="supported">{{ form.supported.label }}</label>
                                 {{ form.supported(size=40, class="form-control") }}
                             </div>
                             {% for error in form.supported.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="requires">{{ form.requires.label }}</label>
                                 {{ form.requires(size=40, class="form-control") }}
                             </div>
                             {% for error in form.requires.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="description">{{ form.description.label }}</label>
                                 {{ form.description(size=40, class="form-control") }}
                             </div>
                             {% for error in form.description.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="image">{{ form.image.label }}</label>
                                 {{ form.image(size=20, class="form-control") }}
                             </div>
                             {% for error in form.image.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <button type="submit" class="btn btn-default">Update</button>
+                            <button type="submit" class="btn btn-primary mt-4 mb-4">Update</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="btn-toolbar">
-            <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}" class="btn btn-default btn-space">
-                <span class="glyphicon glyphicon-th-list"></span> All Objectives
+        <div class="btn-toolbar" role="toolbar" aria-label="Objective Actions">
+            <a href="{{ url_for('show_objectives', world_id=objective.world_id) }}" class="btn btn-primary mt-4 mb-4 btn-space">
+                <i class="bi bi-list-ul"></i> All Objectives
             </a>
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit Objective</button>
+                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal">Edit Objective</button>
 
                 <form action="{{ url_for('show_quest', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-default btn-space">Edit Quest</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Edit Quest</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_my_solution', objective_id=objective.objective_id)}}">
-                    <button type="submit" class="btn btn-default btn-space">Edit My Solution</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Edit My Solution</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete Objective</button>
+                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Objective</button>
             {% endif %}
         </div>
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <h4>Quest</h4>
-        <br>
+        <h4 class="mb-3">Quest</h4>
         {{ mdquest|safe }}
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <h4>Public Solutions</h4>
-        <br>
+        <h4 class="mb-3">Public Solutions</h4>
         {% if world.visible == 1 %}
             <div class="list-group">
                 {% for solution in solutions %}
@@ -169,9 +169,8 @@
                 {% endfor %}
             </div>
         {% else %}
-            Solutions are not visible as this world is not public currently.
+            Solutions are not visible as this world is not public currently.<br>
         {% endif %}
-        <br><br>
     </div>
 {% endblock %}
 
