--- a/templates/release.html
+++ b/templates/release.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Release Notes {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Release Notes {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-        <div class="well">
-            <h4>v1.0 (20220630)</h4>
-            Initial release. Hello World! 😀
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="mb-3">v1.1 (20220701)</h4>
+                Migrate from Bootstrap 3 to Bootstrap 5<br><br>
+                <h4 class="mb-3">v1.0 (20220630)</h4>
+                Initial release. Hello World! 😀
+            </div>
         </div>
     </div>
 {% endblock %}
