--- a/templates/room.html
+++ b/templates/room.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} All Rooms {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} All Rooms {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid pb-3 mt-2 mb-2">
         {% if rooms.count() == 0 %}
-            No entries found.
+            No entries found.<br>
         {% else %}
             <div class="list-group">
                 {% for room in rooms %}
@@ -18,46 +16,44 @@
             </div>
         {% endif %}
 
-        <br><br>
-
         <!-- Modal -->
-        <div id="myModal" class="modal fade" role="dialog">
+        <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Create Room</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_rooms_p', world_id=world.world_id) }}" method="POST">
                             {{ form.csrf_token }}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="name">{{ form.name.label }}</label>
                                 {{ form.name(size=20, class="form-control") }}
                             </div>
                             {% for error in form.name.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="description">{{ form.description.label }}</label>
                                 {{ form.description(size=40, class="form-control") }}
                             </div>
                             {% for error in form.description.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="image">{{ form.image.label }}</label>
                                 {{ form.image(size=20, class="form-control") }}
                             </div>
                             {% for error in form.image.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <button type="submit" class="btn btn-default">Create</button>
+                            <button type="submit" class="btn btn-primary mt-4 mb-4">Create</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
@@ -65,8 +61,7 @@
 
         {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
             <!-- Trigger the modal with a button -->
-            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">Create Room</button>
-            <br><br>
+            <button type="button" class="btn btn-primary mt-4 mb-4" data-bs-toggle="modal" data-bs-target="#myModal">Create Room</button>
         {% endif %}
     </div>
 {% endblock %}
