--- a/templates/solution_detail.html
+++ b/templates/solution_detail.html
@@ -1,25 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} Solution {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} Solution {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid pb-3 mt-2 mb-2">
         {{ mdsolution|safe }}
-        <br><br>
 
-        <div class="btn-toolbar">
+        <div class="btn-toolbar" role="toolbar" aria-label="Solution Actions">
             {% if (current_user.creator_id != solution.creator_id) and (current_user.creator_role == "creator" or current_user.creator_role == "user") %}
                 <form action="{{ url_for('show_liked_solution', solution_id=solution.solution_id) }}" method="GET">
-                    <button type="submit" class="btn btn-default btn-space">Like / Unlike</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Like / Unlike</button>
                 </form>
             {% endif %}
 
             <form action="{{ url_for('show_objective', objective_id=solution.objective_id) }}">
-                <button type="submit" class="btn btn-default btn-space">Back</button>
+                <button type="submit" class="btn btn-secondary mt-4 mb-4 btn-space">Back</button>
             </form>
         </div>
     </div>
