--- a/templates/solution_my_detail.html
+++ b/templates/solution_my_detail.html
@@ -1,60 +1,61 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} My Solution {% endblock %}
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} My Solution {% endblock %}</h2>
     </div>
 
-    <div class="container-fluid">
-    <!-- Delete Modal -->
-        <div id="myModal_del" class="modal fade" role="dialog">
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <!-- Delete Modal -->
+        <div id="myModal_del" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Delete Solution</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_deleted_solution', objective_id=objective_id) }}">
-                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                            <button type="submit" class="btn btn-danger mt-4 mb-4">Confirm</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <h4>For following quest:</h4>
+        <h4 class="mb-3">For following quest:</h4>
         {{ mdquest|safe }}
 
-        <br><hr class="little"><br>
+        <hr class="little mt-4 mb-4">
 
-        <div class="btn-toolbar">
-            <form action="{{ url_for('show_my_solution', objective_id=objective_id)}}" method="POST">
-                <div class="form-group">
-                    <label for="solution">Edit Solution:</label>
-                    <textarea name="solution" cols="50" rows="10" id="solution" class="form-control">{{ solution }}</textarea>
-                </div>
-                <script>
-                    const easyMDE = new EasyMDE();
-                </script>
-                <div class="checkbox">
-                    <label><input type="checkbox" id="visible" name="visible" value="1" {{ 'checked' if (visible==1) }}> Make solution public</label>
-                </div>
-                <button type="submit" class="btn btn-default btn-space">Submit</button>
-            </form>
+        <form action="{{ url_for('show_my_solution', objective_id=objective_id)}}" id="solution" method="POST">
+            <div class="mb-3">
+                <label for="solution">Edit Solution:</label>
+                <textarea name="solution" rows="10" id="solution" class="form-control">{{ solution }}</textarea>
+            </div>
+            <script>
+                const easyMDE = new EasyMDE();
+            </script>
+
+            <div class="form-check">
+                <label class="form-check-label" for="visible">Make solution public</label>
+                <input class="form-check-input" type="checkbox" value="" name="visible" id="visible" {{ 'checked' if (visible==1) }}>
+            </div>
+        </form>
+
+        <div class="btn-toolbar" role="toolbar" aria-label="Solution Actions">
+            <button type="submit" form="solution" class="btn btn-primary mt-4 mb-4 btn-space">Submit</button>
 
             <form action="{{ url_for('show_objective', objective_id=objective_id) }}">
-                <button type="submit" class="btn btn-default btn-space">Cancel</button>
+                <button type="submit" class="btn btn-secondary mt-4 mb-4 btn-space">Cancel</button>
             </form>
 
             {% if current_user.creator_role == "creator" and  current_user.creator_id == creator.creator_id %}
-                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete Solution</button>
+                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal_del">Delete Solution</button>
             {% endif %}
         </div>
     </div>
