--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -1,131 +1,130 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class = "page-header">
-        <h2>
-            {% block title %} {{ world.world_name }} {% endblock %} ({% if world.visible == 1 %}<span class="glyphicon glyphicon-globe"></span> Public{% else %}Closed{% endif %})
-        </h2>
+    <div class="container-fluid pb-2 mt-4 mb-2">
+        <h2>{% block title %} {{ world.world_name }} {% endblock %} ({% if world.visible == 1 %}<i class="bi bi-globe"></i> Public{% else %}Closed{% endif %})</h2>
     </div>
 
-    <div class="container-fluid">
-        <i>Created by <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}">{{ creator.creator_name }}</a></i>
-        <br><br>
-
-        <img src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" alt="World Image" width="33%" height="33%">
-        <br><br>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">{{ world.world_url }}</div>
-            <div class="panel-body">{{ world.world_desc }}</div>
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        <div class="card mb-3" style="max-width: 720px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{{ world.world_img if (world.world_img!='') else '/static/not_found.jpg' }}" class="img-fluid rounded-start" alt="World Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ world.world_url }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Created by <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}">{{ creator.creator_name }}</a></h6>
+                        <p class="card-text">{{ world.world_desc }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <br><br>
-
         <!-- Delete Modal -->
-        <div id="myModal_del" class="modal fade" role="dialog">
+        <div id="myModal_del" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Delete World</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_deleted_world', world_id=world.world_id) }}">
-                            <button type="submit" class="btn btn-danger btn-space">Confirm</button>
+                            <button type="submit" class="btn btn-danger mt-4 mb-4">Confirm</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Modal -->
-        <div id="myModal" class="modal fade" role="dialog">
+        <div id="myModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Edit World</h4>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_world_p', world_id=world.world_id) }}" method="POST">
                             {{ form.csrf_token }}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="name">{{ form.name.label }}</label>
                                 {{ form.name(size=20, class="form-control") }}
                             </div>
                             {% for error in form.name.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="url">{{ form.url.label }}</label>
                                 {{ form.url(size=20, class="form-control") }}
                             </div>
                             {% for error in form.url.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="description">{{ form.description.label }}</label>
                                 {{ form.description(size=40, class="form-control") }}
                             </div>
                             {% for error in form.description.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <div class="form-group">
+                            <div class="form-group mt-2 mb-2">
                                 <label for="image">{{ form.image.label }}</label>
                                 {{ form.image(size=20, class="form-control") }}
                             </div>
                             {% for error in form.image.errors %}
                                 <div class="alert alert-warning"><strong>Warning!</strong> {{ error }}</div>
                             {% endfor %}
-                            <button type="submit" class="btn btn-default">Update</button>
+                            <button type="submit" class="btn btn-primary mt-4 mb-4">Update</button>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="btn-toolbar">
-            <a href="{{ url_for('show_worlds') }}" class="btn btn-default btn-space">
-                <span class="glyphicon glyphicon-th-list"></span> All Worlds
+        <div class="btn-toolbar" role="toolbar" aria-label="Word Actions">
+            <a href="{{ url_for('show_worlds') }}" class="btn btn-primary mt-4 mb-4 btn-space">
+                <i class="bi bi-list-ul"></i> All Worlds
             </a>
 
             <form action="{{ url_for('show_objectives', world_id=world.world_id) }}">
-                <button type="submit" class="btn btn-primary btn-space">Select World</button>
+                <button type="submit" class="btn btn-info mt-4 mb-4 btn-space">Select World</button>
             </form>
 
             {% if current_user.creator_id == world.creator_id %}
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-default btn-space" data-toggle="modal" data-target="#myModal">Edit World</button>
+                <button type="button" class="btn btn-primary mt-4 mb-4 btn-space" data-bs-toggle="modal" data-bs-target="#myModal">Edit World</button>
 
                 <form action="{{ url_for('show_switched_world', world_id=world.world_id) }}">
-                    <button type="submit" class="btn btn-default btn-space">Switch Visibility</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Switch Visibility</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_walkthrough', world_id=world.world_id, format_type='markdown') }}">
-                    <button type="submit" class="btn btn-default btn-space">Create Walkthrough (Markdown)</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Create Walkthrough (Markdown)</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_role == "creator" or current_user.creator_role == "user" %}
                 <form action="{{ url_for('show_walkthrough', world_id=world.world_id, format_type='pdf') }}">
-                    <button type="submit" class="btn btn-default btn-space">Create Walkthrough (HTML)</button>
+                    <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space">Create Walkthrough (HTML)</button>
                 </form>
             {% endif %}
 
             {% if current_user.creator_id == world.creator_id %}
-                <button type="button" class="btn btn-danger btn-space" data-toggle="modal" data-target="#myModal_del">Delete World</button>
+                <button type="button" class="btn btn-danger mt-4 mb-4 btn-space" data-toggle="modal" data-target="#myModal_del">Delete World</button>
             {% endif %}
-            <br><br>
         </div>
     </div>
 {% endblock %}
