--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,6 @@
     <div class="container-fluid pb-3 mt-2 mb-2">
         <b>Kringle Info</b> <i>/ˈkrɪŋ.ɡəl in·fo/</i>. An online CTF solution editor inspired by <a class="link-primary" href="https://www.sans.org/mlp/holiday-hack-challenge/">SANS Holiday Hack Challenge &amp; KringleCon</a>.<br>
         Makes creating solutions and reports easy and fun 😀<br>
-        <br>
-        Based on <a class="link-primary" href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a class="link-primary" href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a class="link-primary" href="https://contabo.com/en/">Contabo</a> servers.<br>
-        If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.
     </div>
 
     <div class="container-fluid pb-3 mt-2 mb-2">
@@ -51,5 +48,10 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+    </div>
+
+    <div class="container-fluid pb-3 mt-2 mb-2">
+        Based on <a class="link-primary" href="https://palletsprojects.com/p/flask/">Flask</a> web application framework and <a class="link-primary" href="https://getbootstrap.com">Bootstrap</a> frontend toolkit. Hosted on <a class="link-primary" href="https://contabo.com/en/">Contabo</a> servers.<br>
+        If you want to get in touch with me just visit my <a class="link-primary" href="https://github.com/Benjamin-BK-Krueger">GitHub page</a> or my <a class="link-primary" href="https://blk8.de">WordPress site</a>.
     </div>
 {% endblock %}
