Fixed bug: doubled x for modal dialogs close

--- a/templates/world_detail.html
+++ b/templates/world_detail.html
@@ -49,7 +49,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Edit World</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_world_p', world_id=world.world_id) }}" method="POST">
