--- a/templates/item_detail.html
+++ b/templates/item_detail.html
@@ -48,7 +48,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Edit Item</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_item_p', item_id=item.item_id) }}" method="POST">
