--- a/templates/objective_detail.html
+++ b/templates/objective_detail.html
@@ -58,7 +58,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title">Edit Objective</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
                         <form action="{{ url_for('show_objective_p', objective_id=objective.objective_id) }}" method="POST">
