--- a/static/main.css
+++ b/static/main.css
@@ -2,10 +2,10 @@ body {
     padding: 10px;
     margin: 10px;
     background: url('/static/background.png') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
     background-size: cover !important;
-    -o-background-size: cover;
+    -o-background-size: cover !important;
 }
 
 .header {
